Cabal-version:  >=1.10
Build-type: Simple
Name:           harpy
Version:        0.6.0.4
License:        BSD3
License-file:   LICENSE
Author:         Dirk Kleeblatt <dirk.kleeblatt@gmx.de>
                Martin Grabmueller <martin@grabmueller.de>
Maintainer:     martin@grabmueller.de
Category:       Code Generation
Synopsis:       Runtime code generation for x86 machine code
Description:    The package contains the following components:
    .
    * A width-indexed x86-64 assembler with compile-time operand-size
      checking in module "Harpy.X86_64", with SysV64 ABI helpers
      ("Harpy.X86_64.Macro") and typed invocation ("Harpy.X86_64.Call").
    .
    * A W^X JIT pipeline: assemble into a pure "Harpy.CodeImage", then load
      it into executable memory ("Harpy.CodeImage").
    .
    * An x86 disassembler in module "Harpy.X86Disassembler", re-exported
      from the disassembler package.
    .
    * All the above modules use the code generation monad defined in module
      "Harpy.CodeGenMonad".
homepage:            https://github.com/mgrabmueller/harpy
bug-reports:         https://github.com/mgrabmueller/harpy/issues
Stability:      Experimental

Extra-source-files:
    NEWS README.md Makefile ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/mgrabmueller/harpy

Library
  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.10 && < 1,
    mtl >= 2.2.1 && < 3,
    template-haskell >= 2 && < 3,
    pretty >= 1 && < 2,
    containers >= 0.3 && < 1,
    disassembler >= 0.2.0.0 && < 0.3,
    unix >= 2.7 && < 2.9
  Exposed-Modules:
    Harpy.X86_64,
    Harpy.X86_64.Encoding,
    Harpy.X86_64.Macro,
    Harpy.X86_64.Call,
    Harpy.Internal.ExecutableMemory,
    Harpy.CodeGenMonad,
    Harpy.CodeImage,
    Harpy.X86Disassembler
  default-language: Haskell2010
  Default-Extensions:
    ForeignFunctionInterface, MultiParamTypeClasses,
    TemplateHaskell, CPP, FlexibleContexts, FlexibleInstances,
    RankNTypes, DataKinds, GADTs, KindSignatures,
    ScopedTypeVariables, TypeApplications

executable x86-64-examples
  hs-source-dirs: examples
  main-is:        X86_64_Examples.hs
  build-depends:
    base >= 4 && < 5,
    harpy
  default-language: Haskell2010
  Default-Extensions:
    ForeignFunctionInterface, DataKinds, ScopedTypeVariables,
    TypeApplications
  ghc-options: -Wall

executable harpy-bench
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    base >= 4 && < 5,
    criterion >= 1.6 && < 1.7,
    deepseq >= 1.4 && < 1.6,
    vector >= 0.12 && < 0.14,
    harpy
  default-language: Haskell2010
  Default-Extensions:
    ForeignFunctionInterface, DataKinds, ScopedTypeVariables,
    TypeApplications, BangPatterns
  ghc-options: -Wall -O2 -rtsopts

test-suite harpy-x86-64-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        X86_64.hs
  build-depends:
    base >= 4 && < 5,
    bytestring,
    process,
    tasty >= 1.5 && < 1.6,
    tasty-hunit >= 0.10 && < 0.11,
    temporary >= 1.3 && < 1.4,
    harpy
  default-language: Haskell2010
  Default-Extensions:
    ForeignFunctionInterface, DataKinds, GADTs, ScopedTypeVariables,
    TypeApplications
  ghc-options: -Wall
